sources/keycloak-config/templates/keycloak-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: https
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: keycloak
      namespace: keycloak
      port: 80
      weight: 1
    matches:
    - headers:
      - name: Host
        type: RegularExpression
        value: kc\..*
      path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: 20s
      request: 90s
